@@ -1,5 +1,6 @@
 
   * now dies if Test::NoTabs is not present, rather than skipping test
+  * develop require prerequisites are now injected into the distribution
 
 0.01  Sat, 29 May 2010 17:02:08 +0200
   * Split off of Dist::Zilla::Plugin::SanityTests.
